--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
         <header>
             <nav>
                 <div class="logo-container">
-                    <a href="home.html"><img src="images/logo.png" alt="crojiachet logo" class="logo"></a>
+                    <a href="index.html"><img src="images/logo.png" alt="crojiachet logo" class="logo"></a>
                     <span class="brand-name">crojiachet</span>
                 </div>
                 <ul class="nav-links">
