--- a/accessories.html
+++ b/accessories.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>shop crojiachet</title>
+        <title>crojiachet collections</title>
         <link rel="icon" type="image/x-icon" href="images/logo.png"/>
 
         <link rel="stylesheet" href="style.css">
@@ -46,43 +46,21 @@
                 <a href="about.html">about</a>
                 <a href="contact.html">contact</a>
             </div>
-            
-        </header>
-        
-        <main>
-            <!-- hero section -->
-            <section class="other-hero">
-                <h1>shop</h1>
-                <br>
-                <h3>browse all my products here!</h3>
-                <br>
-                <p>unlike knitting, crochet cannot be replicated by machines, so each crochet piece ever made is unique and handmade!</p>
-                <p>isn't that so special (❁´◡`❁)</p>
-            </section>
 
-            <section class="product-grid">
-                <div class="product">
-                <a href="flower-lace-jumper.html"><img src="images/flower lace jumper (modelled by amira).jpg" alt="flower lace jumper"></a>
-                <h2>flower lace jumper</h2>
-                <p>£30</p>
-                </div>
-                <div class="product">
-                <a href="sunflower-lace-jumper.html"><img src="images/sunflower lace jumper 2 cropped.jpg" alt="sunflower lace jumper"></a>
-                <h2>sunflower lace jumper</h2>
-                <p>£30</p>
-                </div>
-                <div class="product">
-                <a href="kimono-cardigan.html"><img src="images/kimono cardigan crap pic.jpg" alt="kimono cardigan"></a>
-                <h2>kimono cardigan</h2>
-                <p>£30</p>
-                </div>
-                <div class="product">
+        </header>
+
+        <!-- hero section -->
+        <section class="other-hero">
+            <h1>accessories</h1>
+        </section>
+
+        <section class="product-grid">
+            <div class="product">
                 <a href="fairbrook-scarf.html"><img src="images/fairbrook scarf modelled 1.jpg" alt="fairbrook scarf"></a>
                 <h2>fairbrook scarf</h2>
                 <p>£15</p>
                 </div>
-            </section>
-        </main>
+        </section>
 
         <!-- footer -->
         <footer>
