--- a/how-to-order.html
+++ b/how-to-order.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>shop crojiachet</title>
+        <title>how to order</title>
         <link rel="icon" type="image/x-icon" href="images/logo.png"/>
 
         <link rel="stylesheet" href="style.css">
@@ -46,43 +46,32 @@
                 <a href="about.html">about</a>
                 <a href="contact.html">contact</a>
             </div>
-            
-        </header>
-        
-        <main>
-            <!-- hero section -->
-            <section class="other-hero">
-                <h1>shop</h1>
-                <br>
-                <h3>browse all my products here!</h3>
-                <br>
-                <p>unlike knitting, crochet cannot be replicated by machines, so each crochet piece ever made is unique and handmade!</p>
-                <p>isn't that so special (❁´◡`❁)</p>
-            </section>
 
-            <section class="product-grid">
-                <div class="product">
-                <a href="flower-lace-jumper.html"><img src="images/flower lace jumper (modelled by amira).jpg" alt="flower lace jumper"></a>
-                <h2>flower lace jumper</h2>
-                <p>£30</p>
-                </div>
-                <div class="product">
-                <a href="sunflower-lace-jumper.html"><img src="images/sunflower lace jumper 2 cropped.jpg" alt="sunflower lace jumper"></a>
-                <h2>sunflower lace jumper</h2>
-                <p>£30</p>
-                </div>
-                <div class="product">
-                <a href="kimono-cardigan.html"><img src="images/kimono cardigan crap pic.jpg" alt="kimono cardigan"></a>
-                <h2>kimono cardigan</h2>
-                <p>£30</p>
-                </div>
-                <div class="product">
-                <a href="fairbrook-scarf.html"><img src="images/fairbrook scarf modelled 1.jpg" alt="fairbrook scarf"></a>
-                <h2>fairbrook scarf</h2>
-                <p>£15</p>
-                </div>
-            </section>
-        </main>
+        </header>
+
+        <!-- hero section -->
+        <section class="other-hero">
+            <h1>how to order</h1>
+        </section>
+
+        <section class="about-text">
+            <br><br>
+            <h2>here's how to order from me ᓚᘏᗢ</h2>
+            <br>
+            <p>1. choose what item you want to add to your collection!</p>
+            <br>
+            <p>2. send me a message via instagram/whatsapp (find them <a href="contact.html">here</a>) to place your order. your message should include:</p>
+            <p>• product name</p>
+            <p>• colour</p>
+            <p>• your size (include any alterations you'd like, e.g. longer sleeves)</p>
+            <br>
+            <p>3. before i start making your order, i will confirm that you are happy with the colour i have and i will take payment via bank transfer.</p>
+            <p>if you are a negotiating queen, feel free to shoot some offers.</p>
+            <p>shipping is included in the price (royal mail tracked 48), and i will need your email so you'll be able to track your package!</p>
+            <br>
+            <p>4. i aim to create and send orders within a week, so hang tight and thank you for purchasing! ヾ(≧▽≦*)o</p>
+            <br><br><br>
+        </section>
 
         <!-- footer -->
         <footer>
