--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8"/>
-        <meta name="theme-color" content="#f7e5e4">
+        <meta name="theme-color" content="#fa9db3">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>crojiachet</title>
         <link rel="icon" type="image/x-icon" href="images/logo.png"/>
