--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#fa9db3">
         <title>contact crojiachet</title>
         <link rel="icon" type="image/x-icon" href="images/logo.png"/>
 
