--- a/fairbrook-scarf.html
+++ b/fairbrook-scarf.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#fa9db3">
         <title>shop crojiachet</title>
         <link rel="icon" type="image/x-icon" href="images/logo.png"/>
 
@@ -84,19 +85,18 @@
                     <br><br>
                     <p>a thick scarf to stand with you through the chilliest days</p>
                     <br><br>
-                    <h4>standard dimensions</h4>
+                    <h4>product information</h4>
                     <p>• length: 147cm</p>
                     <p>• width: 24cm</p>
-                    <br>
-                    <p>can be customised to whatever dimensions you would like :)</p>
-                    <br><br><br>
+                    <p>• colour: school green</p>
+                    <br><br>
                     <h4>product information</h4>
                     <p>• made with 100% acrylic yarn</p>
                     <p>• hand-wash only</p>
                     <p>• colours and sizes are completely customizable, please dm
                         me on what you would like!
                     </p>
-                    <br><br><br>
+                    <br><br>
                     <h4>shipping information</h4>
                     <p>• shipping is included in the price</p>
                     <p>• tracked 48hr delivery by royal mail</p>
