--- a/flower-lace-jumper.html
+++ b/flower-lace-jumper.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#fa9db3">
         <title>flower lace jumper</title>
         <link rel="icon" type="image/x-icon" href="images/logo.png"/>
 
@@ -92,18 +93,16 @@
                     <br><br>
                     <h4>product information</h4>
                     <p>• fits slightly oversized</p>
-                    <p>• jumper in the image fits UK 8/10/12</p>
+                    <p>• product in the image fits UK 8/10/12</p>
                     <p>• colour: oatmeal</p>
-                    <br>
-                    <p>can be customised to whatever dimensions you would like :)</p>
-                    <br><br><br>
+                    <br><br>
                     <h4>additional information</h4>
                     <p>• made with 100% acrylic yarn</p>
                     <p>• hand-wash only</p>
                     <p>• colours and sizes are completely customizable, please dm
                         me on what you would like!
                     </p>
-                    <br><br><br>
+                    <br><br>
                     <h4>shipping information</h4>
                     <p>• shipping is included in the price</p>
                     <p>• tracked 48hr delivery by royal mail</p>
