--- a/fairbrook-scarf.html
+++ b/fairbrook-scarf.html
@@ -90,7 +90,7 @@
                     <p>• width: 24cm</p>
                     <p>• colour: school green</p>
                     <br><br>
-                    <h4>product information</h4>
+                    <h4>additional information</h4>
                     <p>• made with 100% acrylic yarn</p>
                     <p>• hand-wash only</p>
                     <p>• colours and sizes are completely customizable, please dm
