--- a/clothes.html
+++ b/clothes.html
@@ -28,11 +28,11 @@
                     <span class="brand-name">crojiachet</span>
                 </div>
                 <ul class="nav-links">
-                  <li><a href="shop.html">shop</a></li>
-                  <li><a href="collections.html">collections</a></li>
-                  <li><a href="how-to-order.html">how to order</a></li>
-                  <li><a href="about.html">about</a></li>
-                  <li><a href="contact.html">contact</a></li>
+                    <li><a href="shop.html">shop</a></li>
+                    <li><a href="collections.html">collections</a></li>
+                    <li><a href="how-to-order.html">how to order</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
 
@@ -41,6 +41,7 @@
             <!-- mobile sidebar menu -->
             <div class="sidebar" id="sidebar">
                 <button class="close-btn" onclick="toggleSidebar()">✖</button>
+                <a href="index.html">home</a>
                 <a href="shop.html">shop</a>
                 <a href="collections.html">collections</a>
                 <a href="how-to-order.html">how to order</a>
@@ -66,7 +67,7 @@
             <p>£30</p>
             </div>
             <div class="product">
-            <a href="kimono-cardigan.html"><img src="images/kimono cardigan crap pic.jpg" alt="kimono cardigan"></a>
+            <a href="kimono-cardigan.html"><img src="images/kimono cardigan (modelled by mona) 1.jpg" alt="kimono cardigan"></a>
             <h2>kimono cardigan</h2>
             <p>£30</p>
             </div>
