--- a/collections.html
+++ b/collections.html
@@ -41,6 +41,7 @@
             <!-- mobile sidebar menu -->
             <div class="sidebar" id="sidebar">
                 <button class="close-btn" onclick="toggleSidebar()">✖</button>
+                <a href="index.html">home</a>
                 <a href="shop.html">shop</a>
                 <a href="collections.html">collections</a>
                 <a href="how-to-order.html">how to order</a>
