--- a/kimono-cardigan.html
+++ b/kimono-cardigan.html
@@ -28,11 +28,11 @@
                     <span class="brand-name">crojiachet</span>
                 </div>
                 <ul class="nav-links">
-                  <li><a href="shop.html">shop</a></li>
-                  <li><a href="collections.html">collections</a></li>
-                  <li><a href="how-to-order.html">how to order</a></li>
-                  <li><a href="about.html">about</a></li>
-                  <li><a href="contact.html">contact</a></li>
+                    <li><a href="shop.html">shop</a></li>
+                    <li><a href="collections.html">collections</a></li>
+                    <li><a href="how-to-order.html">how to order</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
 
@@ -41,6 +41,7 @@
             <!-- mobile sidebar menu -->
             <div class="sidebar" id="sidebar">
                 <button class="close-btn" onclick="toggleSidebar()">✖</button>
+                <a href="index.html">home</a>
                 <a href="shop.html">shop</a>
                 <a href="collections.html">collections</a>
                 <a href="how-to-order.html">how to order</a>
@@ -56,32 +57,26 @@
                 <div class="slideshow-container">
                     <!-- slide 1 -->
                     <div class="slide fade">
-                        <img src="images/kimono cardigan crap pic.jpg" alt="kimono cardigan 1">
+                        <img src="images/kimono cardigan (modelled by mona) 1.jpg" alt="kimono cardigan 1">
                     </div>
 
                     <!-- slide 2 -->
-                    <!-- 
                     <div class="slide fade">
-                        <img src="images/cherry blossom placeholder.avif" alt="kimono cardigan 2">
+                        <img src="images/kimono cardigan (modelled by mona) 2.jpg" alt="kimono cardigan 2">
                     </div>
-                    -->
 
                     <!-- slide 3 -->
-                    <!--
                     <div class="slide fade">
-                        <img src="images/cherry blossom placeholder.avif" alt="kimono cardigan 3">
+                        <img src="images/kimono cardigan (modelled by amira).jpg" alt="kimono cardigan 3">
                     </div>
-                    -->
 
                     <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
                     <a class="next" onclick="changeSlide(1)">&#10095;</a>
 
                     <div class="dots-container">
                         <span class="dot" onclick="setSlide(1)"></span>
-                        <!--
                         <span class="dot" onclick="setSlide(2)"></span>
                         <span class="dot" onclick="setSlide(3)"></span>
-                        -->
                     </div>
                 </div>
 
@@ -93,7 +88,8 @@
                     <br><br>
                     <h4>product information</h4>
                     <p>• fits oversized</p>
-                    <p>• product in the image fits UK 8/10 comfortably</p>
+                    <p>• product in the 1st and 2nd images is a kids' size</p>
+                    <p>• product in the 3rd image fits UK 8/10 comfortably</p>
                     <p>• colour: dark grey & black</p>
                     <br><br>
                     <h4>additional information</h4>
