--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                     <span class="brand-name">crojiachet</span>
                 </div>
                 <ul class="nav-links">
-                  <li><a href="shop.html">shop</a></li>
-                  <li><a href="collections.html">collections</a></li>
-                  <li><a href="how-to-order.html">how to order</a></li>
-                  <li><a href="about.html">about</a></li>
-                  <li><a href="contact.html">contact</a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="shop.html">shop</a></li>
+                    <li><a href="collections.html">collections</a></li>
+                    <li><a href="how-to-order.html">how to order</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
 
