--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
 
             <div class="product-slide">
-                <a href="kimono-cardigan.html"><img src="images/kimono cardigan crap pic.jpg" alt="kimono cardigan"></a>
+                <a href="kimono-cardigan.html"><img src="images/kimono cardigan (modelled by mona) 1.jpg" alt="kimono cardigan"></a>
                 <div class="product-info">
                     <h2>kimono cardigan</h2>
                     <p>£30</p>
