edited about slightly

--- a/about.html
+++ b/about.html
@@ -84,10 +84,10 @@
             <br><br><br>
             <h2>plans moving forward...</h2>
             <br>
-            <p>i sincerely hope anyone who has something i've crocheted truly enjoys it! that is all i can ask for</p>
+            <p>i sincerely hope anyone who has something i've crocheted truly enjoys it! that is all i can ask for.</p>
             <p>it is one of the greatest joys to see someone appreciate the hard work you put into making them happy!</p>
             <br>
-            <p>i hope as i continue doing this, i will have more than 3 products listed (😭) and i can cater to everyone as much as possible</p>
+            <p>i hope as i continue doing this, i will have more than 3 products listed (😭) and i can cater to everyone as much as possible.</p>
             <p>i'm still a uni student but i'm forever a hustler #diva</p>
             <br>
             <p>if you've read this far, thank you for staying and hope to hear from you soon!</p>
