added care instructions to products

--- a/fairbrook-scarf.html
+++ b/fairbrook-scarf.html
@@ -94,6 +94,7 @@
                     <h4>product information</h4>
                     <p>• made with 100% acrylic yarn</p>
                     <p>• hand-wash only</p>
+                    <p>• do not iron!</p>
                     <p>• colours and sizes are completely customizable, please dm
                         me on what you would like!
                     </p>
