--- a/sunflower-lace-jumper.html
+++ b/sunflower-lace-jumper.html
@@ -95,6 +95,7 @@
                     <h4>additional information</h4>
                     <p>• made with 100% acrylic yarn</p>
                     <p>• hand-wash only</p>
+                    <p>• do not iron! please use a steamer instead</p>
                     <p>• colours and sizes are completely customizable, please dm
                         me on what you would like!
                     </p>
