removed product slideshow from home page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <a href="shop.html" class="cta-button">browse</a>
         </section>
 
-        <!-- product slideshow -->
+        <!-- removing the product slideshow lol
+
+        <-- product slideshow 
         <div class="heading-lol">
             <h2>new products</h2>
         </div>
@@ -94,6 +96,8 @@
                 </div>
             </div>
         </div>
+
+        -->
         
         <div class="">
 
