more edits to the shop page header

--- a/shop.html
+++ b/shop.html
@@ -56,8 +56,9 @@
             <section class="other-hero">
                 <br>
                 <h1>shop</h1>
-                <br>
+                <!-- removing this
                 <h3>browse all my products here!</h3>
+                -->
                 <br>
                 <p>unlike knitting, crochet cannot be replicated by machines, so each crochet piece ever made is unique and handmade!</p>
                 <p>isn't that so special (❁´◡`❁)</p>
