--- a/shop.html
+++ b/shop.html
@@ -85,6 +85,16 @@
                 <h2>fairbrook scarf</h2>
                 <p>£15</p>
                 </div>
+                <div class="product">
+                <a href="rose-blanket.html"><img src="images/rose blanket 4.jpg" alt="rose blanket"></a>
+                <h2>rose blanket</h2>
+                <p>£7</p>
+                </div>
+                <div class="product">
+                <a href="lily-of-the-valley-keychain.html"><img src="images/lily of the valley keychain 1.jpg" alt="lily of the valley keychain"></a>
+                <h2>lily of the valley keychain</h2>
+                <p>£4</p>
+                </div>
             </section>
         </main>
 
