--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-        <!-- addng custom fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-        <!-- theme colour for mobile browsers; set the colour of the browser UI to match your brand -->
-        <meta name="theme-color" content="#ff6600">
-
     </head>
 
     <body>
@@ -54,6 +46,12 @@
         <!-- hero section -->
         <section class="hero">
             <h1>handmade crocheted goods</h1>
+            <br><br>
+            <h3>ON HIATUS UNTIL 21 AUG</h3>
+            <p>i won't be able to work on orders but i will accept requests so i can start them when i'm back!</p>
+            <br>
+            <p>thank you for your understanding (´▽`ʃ♡ƪ)</p>
+            <br>
             <a href="shop.html" class="cta-button">browse</a>
         </section>
 
