small edits after being back

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <br><br><br>
             <h2>about me</h2>
             <br>
-            <p>i'm a 2nd year computer science student at aston university!</p>
+            <p>i'm a 3rd year computer science student at aston university!</p>
             <p>i wonder if that is a shock or not...</p>
             <br>
             <p>my crochet hobby began in sixth form, and the first time i learned to crochet was a trainwreck and a half!</p>
@@ -79,7 +79,7 @@
             <p>i sincerely hope anyone who has something i've crocheted truly enjoys it! that is all i can ask for.</p>
             <p>it is one of the greatest joys to see someone appreciate the hard work you put into making them happy!</p>
             <br>
-            <p>i hope as i continue doing this, i will have more than 3 products listed (😭) and i can cater to everyone as much as possible.</p>
+            <p>i hope as i continue doing this, i will have more products listed and there will be something for everyone!</p>
             <p>i'm still a uni student but i'm forever a hustler #diva</p>
             <br>
             <p>if you've read this far, thank you for staying and hope to hear from you soon!</p>
