--- a/how-to-order.html
+++ b/how-to-order.html
@@ -59,11 +59,13 @@
             <p>• colour</p>
             <p>• your size (include any alterations you'd like, e.g. longer sleeves)</p>
             <br>
-            <p>3. before i start making your order, i will confirm that you are happy with the colour i have and i will take payment via bank transfer.</p>
-            <p>if you are a negotiating queen, feel free to shoot some offers.</p>
+            <p>3. before i start making your order, i will confirm that you are happy with the colour i have/will order and i will take payment via bank transfer when i finish your order.</p>
             <p>shipping is included in the price (royal mail tracked 48), and i will need your email so you'll be able to track your package!</p>
             <br>
             <p>4. i aim to create and send orders within a week, so hang tight and thank you for purchasing! ヾ(≧▽≦*)o</p>
+            <br>
+            <p><i>side note: i'm in my final year so it may take longer to create and deliver orders, apologies in advance and i'll let you know if i'm running late with them!</i></p>
+            <p><i>thank you for your understanding ♡</i></p>
             <br><br><br>
         </section>
 
